fix security issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 application.security.jwt.refresh-token.cookie-name=valevaleting
-qr.code.url=www.google.com
+qr.code.url=
 application.security.jwt.secret-key=${AUTHORITIES_KEY}
 application.security.jwt.expiration=9000000
 application.security.jwt.cookie-name=jwt-cookie
@@ -19,3 +19,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+cloudinary.cloud_name=${CLOUDINARY_NAME}
+cloudinary.api_key=${CLOUDINARY_KEY}
+cloudinary.api_secret=${CLOUDINARY_SECRET}
